fix: remove theme switch flicker

--- a/_includes/assets/css/inline.css
+++ b/_includes/assets/css/inline.css
@@ -31,17 +31,17 @@
 
 /* Customizations */
 
-header > nav > ul > li > a:first-of-type {
+header > nav > ul:first-of-type > li > a {
   width: 65px;
   height: 65px;
   display: block;
 }
 
-[data-theme="light"] header > nav > ul > li > a {
+[data-theme="light"] header > nav > ul:first-of-type > li > a {
   background-image: url("/static/img/logo-dark.png");
 }
 
-[data-theme="dark"] header > nav > ul > li > a {
+[data-theme="dark"] header > nav > ul:first-of-type > li > a {
   background-image: url("/static/img/logo-light.png");
 }
 
